dnl glibc add-on configure.in fragment for a ports add-on.
GLIBC_PROVIDES dnl See aclocal.m4 in the top level source directory.

# The configure fragment in this file provides infrastructure for a glibc
# add-on containing one or more glibc ports.  Only these few script files
# need exist in the top-level source directory of the add-on.  The ports
# themselves are contained entirely within their new sysdeps/ directories.
# This makes it easy to take these few top-level files plus a new port's
# additions to the sysdeps tree, and package a small add-on for that port.
# The same infrastructure scripts work for any number of such glibc ports
# collected together into a single shared add-on package.

cpu_frags=`(cd $srcdir/$libc_add_on; echo sysdeps/*/preconfigure)`
test x"$cpu_frags" = x'sysdeps/*/preconfigure' ||
for frag in $cpu_frags; do
  AC_MSG_RESULT(ports add-on running preconfigure fragment $frag)
  . $srcdir/$libc_add_on/$frag
done
